# Travelers-Netcode

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/include/TRA/netcode/client/: client.hpp  clientId.hpp  messages.hpp  spawnDespawnManager.hpp  tags.hpp
Client/src/: client.cpp  spawnDespawnManager.cpp
CommonInclude/TRA/: debugUtils.hpp  errorCode.hpp
Core/: CMakeLists.txt
Core/include/TRA/netcode/core/: netUtils.hpp  networkInclude.hpp  tcpSocket.hpp  udpSocket.hpp  wsaInitializer.hpp
Core/internal/: socketUtils.hpp
Core/src/: netUtils.cpp  socketUtils.cpp  tcpSocket.cpp  udpSocket.cpp  wsaInitializer.cpp
Ecs/: CMakeLists.txt
Ecs/include/TRA/ecs/: componentManager.hpp  engine.hpp  entity.hpp  entityBuffer.hpp  entityManager.hpp  iComponent.hpp  iSystem.hpp  queryKey.hpp  sparseSet.hpp  systemManager.hpp  utils.hpp
Ecs/internal/: entityManager.hpp
Ecs/src/: engine.cpp  entity.cpp  entityBuffer.cpp  entityManager.cpp  systemManager.cpp
Engine/: CMakeLists.txt
Engine/include/TRA/ecs/: ISystem.hpp  archetype.hpp  component.hpp  componentLibrary.hpp  componentRegister.hpp  entityManager.hpp  entitySignature.hpp  signatureKey.hpp  tag.hpp  tagLibrary.hpp  world.hpp
Engine/include/TRA/netcode/engine/: INetworkComponent.hpp  ISerializableComponent.hpp  connectionStatusComponent.hpp  disconnectedComponent.hpp  fieldSerializer.hpp  message.hpp  networkComponent.hpp  networkEcs.hpp  networkEcsUtils.hpp  networkEngine.hpp  networkId.hpp  networkIdManager.hpp  networkRootComponentTag.hpp  newConnectionComponent.hpp  serializable.hpp  spawnDespawn.hpp  tags.hpp
Engine/internal/: acceptConnectionSystem.hpp  destroyComponentTag.hpp  disconnectSystem.hpp  iNetworkSystem.hpp  messageComponent.hpp  messageFactory.hpp  messageHeader.hpp  messageSerializer.hpp  messageSystem.hpp  networkComponentFactory.hpp  networkComponentIdBuffer.hpp  networkIdComponent.hpp  networkIdMessage.hpp  networkSystemRegistrar.hpp  pendingDisconnectComponent.hpp  pendingDisconnectSystem.hpp  selfComponent.hpp  snapshotComponent.hpp  snapshotMessage.hpp  snapshotSystem.hpp  socketComponent.hpp  tags.hpp
Engine/lib/: tra_ecs.lib
Engine/src/: acceptConnectionSystem.cpp  disconnectSystem.cpp  fieldSerializer.cpp  message.cpp  messageFactory.cpp  messageSerializer.cpp  messageSystem.cpp  networkComponent.cpp  networkComponentFactory.cpp  networkEcs.cpp  networkEngine.cpp  networkIdManager.cpp  networkSystemRegistrar.cpp  pendingDisconnectSystem.cpp  serializable.cpp  snapshotSystem.cpp
Server/: CMakeLists.txt
Server/include/TRA/netcode/server/: clientEntityRegistry.hpp  clientId.hpp  messages.hpp  server.hpp  spawnDespawnManager.hpp  tags.hpp
Server/src/: clientEntityRegistry.cpp  server.cpp  spawnDespawnManager.cpp
TestClient/: CMakeLists.txt
TestClient/src/: main.cpp
TestEcs/: CMakeLists.txt
TestEcs/src/: main.cpp
TestServer/: CMakeLists.txt
TestServer/src/: main.cpp
extLibs/header/TRA/ecs/: archetype.hpp  chunk.hpp  chunkColumn.hpp  chunkLayout.hpp  component.hpp  componentInfo.hpp  componentLibrary.hpp  entity.hpp  entityData.hpp  entityManager.hpp  entitySignature.hpp  export.hpp  signatureKey.hpp  tagLibrary.hpp  tagRegister.hpp  world.hpp
extLibs/lib/: tra_ecs.lib
