cmake_minimum_required(VERSION 3.10)

project(TravelersMultiplayerEngine VERSION 0.1)

# Use C++17 standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Define common include path BEFORE subdirectories
set(COMMON_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/CommonInclude)
set(EXT_LIBS_DIR ${CMAKE_SOURCE_DIR}/extLibs)

set(COMMON_EXPORT_LIB_DIR ${CMAKE_SOURCE_DIR}/ExportDLL/lib)
set(COMMON_EXPORT_COMMON_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/ExportDLL/include/TRA)
set(COMMON_EXPORT_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/ExportDLL/include/TRA/netcode)

file(MAKE_DIRECTORY ${COMMON_EXPORT_LIB_DIR})
file(MAKE_DIRECTORY ${COMMON_EXPORT_INCLUDE_DIR})
file(MAKE_DIRECTORY ${COMMON_EXPORT_INCLUDE_DIR}/core)
file(MAKE_DIRECTORY ${COMMON_EXPORT_INCLUDE_DIR}/engine)
file(MAKE_DIRECTORY ${COMMON_EXPORT_INCLUDE_DIR}/server)
file(MAKE_DIRECTORY ${COMMON_EXPORT_INCLUDE_DIR}/client)

add_subdirectory(Core)
add_subdirectory(Engine)
add_subdirectory(Server)
add_subdirectory(Client)

add_subdirectory(TestClient)
add_subdirectory(TestServer)